objects/companycam__CompanyCamSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>companycam__AuthToken__c</fullName>
        <label>Auth Token</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>companycam__Auto_initiate__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Auto-initiate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>companycam__BaseURL__c</fullName>
        <label>Base URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CompanyCam Settings</label>
</CustomObject>